--- a/myapp/package.json
+++ b/myapp/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/bin/www",
-    "dev": "babel-node ./src/bin/www.js",
+    "start": "nodemon --exec babel-node ./src/bin/www.js --delay 2",
+    "dev": "nodemon --exec babel-node ./src/bin/www.js --delay 2",
     "clean": "rm -rf dist",
     "build": "npm run clean && babel ./src --out-dir dist --copy-files",
-    "prod": "node ./dist/bin/www.js"
+    "prod": "nodemon --exec node ./dist/bin/www.js --delay 2"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.16.7",
     "core-js": "^3.20.2",
     "eslint": "^8.6.0",
+    "nodemon": "^2.0.15",
     "regenerator-runtime": "^0.13.9"
   }
 }
